--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "clinics-service",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
+  "description": "Application developed as Code Challenge for ScratchPay Mid-BackEnd position.",
+  "author": "Vênus Milo",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
