--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --config ./test/jest.json --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
